# structures

./: .gitignore  README.md  pyproject.toml
src/structures/: deque.py  queue.py  stack.py
tests/: test_deque.py  test_queue.py  test_stack.py
